@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-03-04T00:40:41Z",
-  "count_outdated" : 8566,
-  "uniques_outdated" : 3960,
-  "count" : 8595,
-  "uniques" : 3985,
+  "timestamp" : "2025-03-04T12:15:19Z",
+  "count_outdated" : 8567,
+  "uniques_outdated" : 3961,
+  "count" : 8596,
+  "uniques" : 3986,
   "clones" : [
-    {
-      "timestamp": "2025-02-18T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-02-19T00:00:00Z",
       "count": 4,
@@ -124,6 +115,15 @@
     },
     {
       "timestamp": "2025-03-03T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-03-04T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
